# search_engine

./: .gitignore  CMakeLists.txt  ConverterJSON.cpp  ConverterJSON.h  InvertedIndex.cpp  InvertedIndex.h  README.md  SearchServer.cpp  SearchServer.h  main.cpp  test.cpp
resources/: file001.txt  file002.txt
src/: CMakeLists.txt  ConverterJSON.cpp  InvertedIndex.cpp  test.cpp
